# sei-mcp

./: .cursorrules  API.md  Cargo.toml  MCP_INTEGRATION.md  MCP_TROUBLESHOOTING.md  README.md  SECURITY_GUIDE.md  SETUP.md  TESTING_GUIDE.md  commandsNow.md  dotevn.md  manual_test.sh  mcp.json  openapi.json  register_wallet.sh  run_all_tests.sh  test_full_mcp.sh  test_http_api.sh  test_mcp_server.sh  test_mcp_staking.sh  test_staking.sh
.github/workflows/: keepalive.yml  release.yml
config/: default.toml
faucet-api/: README.md  package-lock.json  package.json  tsconfig.json
faucet-api/src/: index.ts
faucet-api/src/lib/: evm.ts  native.ts  redis.ts
mcp-server/: README.md  mcp.json
mcp-server/src/: config.rs  main.rs
mcp-server/src/api/: contract.rs  discord.rs  mod.rs
mcp-server/src/blockchain/: client.rs  mod.rs  models.rs
mcp-server/src/blockchain/services/: contract.rs  mod.rs  wallet.rs
mcp-server/src/mcp/: handler.rs
mcp-server/tests/: test_mcp_server.sh  test_persistent_wallet.sh
scripts/: install.sh
sei-faucet/: .gitignore  exampls.txt  faucet.db-shm  faucet.db-wal  package-lock.json  package.json  tsconfig.json
sei-faucet/src/: config.ts  db.ts  faucet.ts  index.ts
src/: config.rs  lib.rs  main.rs  mcp.rs  mcp_working.rs
src/api/: balance.rs  contract.rs  event.rs  faucet.rs  fees.rs  health.rs  history.rs  mod.rs  staking.rs  transfer.rs  wallet.rs
src/blockchain/: client.rs  mod.rs  models.rs
src/blockchain/services/: balance.rs  contract.rs  event.rs  faucet.rs  history.rs  mod.rs  staking.rs  transactions.rs  wallet.rs
src/mcp/: encryption.rs  enhanced_tools.rs  handler.rs  mod.rs  protocol.rs  tools.rs  transport.rs  wallet_storage.rs
tests/: integration_tests.rs  normalize_chain_id.rs  test_mcp.sh  test_persistent_wallet.sh  test_wallet_storage.rs
