[package]
name = "sei-mcp-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing dependencies
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atty = "0.2"
dotenvy = "0.15"
bip39 = "2.0"
ethers-core = { version = "2.0" }
hex = "0.4"
tokio-util = "0.7"
thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3"
tendermint-rpc = { version = "0.34", features = [
    "http-client",
    "websocket-client",
] }

# Encryption dependencies
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
dirs = "5.0"
sha2 = "0.10"
rpassword = "7.0"

# Simple MCP dependencies  
uuid = { version = "1.0", features = ["v4"] }
actix-web = "4.11.0"
tracing-actix-web = "0.7.19"
ethers-signers = "2.0.14"
actix-cors = "0.7"
actix-governor = "0.5"
lazy_static = "1.4"
futures-util = "0.3"
actix-web-actors = "4.1.0"
[dev-dependencies]
tempfile = "3.8"
