[package]
name = "sei-mcp-server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework (Axum)
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }

# Async and Tracing
futures = "0.3"
futures-util = "0.3"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization and Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
base64 = "0.21"
hex = "0.4"
secrecy = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Configuration and Environment
dotenvy = "0.15"
dirs = "5.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Blockchain (Ethereum)
ethers-core = { version = "2.0" }
ethers-signers = "2.0.14"

# Blockchain (Cosmos / Tendermint) - Only for event searching if retained, now replaced
tendermint-rpc = { version = "0.32.2", features = ["http-client", "websocket-client"] }

tonic = "0.11"
cosmos-sdk-proto = { version = "0.20.0", features = ["cosmwasm"] }
cosmrs = { version = "0.17" }

# Cryptography and Keys
bip39 = "2.0"
aes-gcm = "0.10"
argon2 = "0.5"
hdpath = "0.6"
k256 = "0.13"
bech32 = "0.9"
ripemd = "0.1"
sha2 = "0.10"
rand = "0.8"
rpassword = "7.0"
bip32 = { version = "0.5", features = ["secp256k1"] }

# Concurrency
dashmap = "5.5" # FIX: Added for concurrent nonce management

# Utilities
reqwest = { version = "0.12", features = ["json"] }
atty = "0.2"
prost = "0.12"


[dev-dependencies]
tempfile = "3.8"
